# ODR-AudioEnc

./: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_REPORT.md  validate_final  validate_final.cpp  validate_implementation.cpp  validate_simple.cpp
docker/: entrypoint.sh  healthcheck.sh
docker/config/: default.conf
src/: VLCInput.h  api_interface.cpp  api_interface.h  enhanced_stream.cpp  enhanced_stream.h  security_utils.cpp  security_utils.h  thai_metadata.cpp  thai_metadata.h
tests/: CMakeLists.txt  test_api_interface.cpp  test_enhanced_stream.cpp  test_main.cpp  test_security_utils.cpp  test_thai_metadata.cpp
